hells_defconfig: Regenerate

--- a/arch/arm64/configs/hells_defconfig
+++ b/arch/arm64/configs/hells_defconfig
@@ -417,6 +417,7 @@ CONFIG_PM_CLK=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_CPU_PM=y
 CONFIG_SUSPEND_TIME=y
+CONFIG_QUICK_WAKEUP=y
 # CONFIG_DEDUCE_WAKEUP_REASONS is not set
 # CONFIG_PARTIALRESUME is not set
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
@@ -463,8 +464,7 @@ CONFIG_CPU_FREQ_MSM=y
 CONFIG_CPU_IDLE=y
 CONFIG_CPU_IDLE_MULTIPLE_DRIVERS=y
 # CONFIG_CPU_IDLE_GOV_LADDER is not set
-# CONFIG_CPU_IDLE_GOV_MENU is not set
-CONFIG_CPU_IDLE_GOV_NULL=y
+CONFIG_CPU_IDLE_GOV_MENU=y
 # CONFIG_ARCH_NEEDS_CPU_IDLE_COUPLED is not set
 CONFIG_NET=y
 CONFIG_COMPAT_NETLINK_MESSAGES=y
